# Game1

./: .gitmodules  CMakeLists.txt  Game1.cpp
Assets/Shaders/HLSL/: shaders.hlsl
Assets/SpriteSheets/: Idle.json  Sprite-0001.aseprite  Sprite-0001.json  glyphs.aseprite
Assets/Tiles/: base.tiled-session  map1.tsj  map_1.tsx
DX12Lib/: CMakeLists.txt
DX12Lib/Core/: CommandContext.cpp  CommandContext.h  DXHelper.cpp  DXHelper.h  DescriptorHeap.cpp  DescriptorHeap.h  Display.cpp  Display.h  Gpu.cpp  Gpu.h  GpuBuffer.cpp  GpuResource.cpp  GpuResource.h  Mesh.h  PipelineStateObject.cpp  PipelineStateObject.h  Renderer.h  Shader.h  StaticHeap.cpp  StaticHeap.h  Util.h  Vertex.h
glad/: CMakeLists.txt
glad/src/: glad.c
src/: App.h  Game1.cpp  Game1.h
src/UI/: ui.h
src/backend/: DX12_Pipeline.cpp  DX12_Pipeline.h  DeviceResources.cpp  DeviceResources.h  File.cpp  File.h  FrameResource.cpp  FrameResource.h  Renderer.h  win_com.cpp  win_com.h
src/backend/primitives/: Vertex.h
src/components/: Character.h  Entity.h  Sprite.h  Transform.h
src/entities/: Mob.h
src/shared/: Paths.h  Resources.cpp  Resources.h
src/systems/: Animation.cpp  Animation.h  EntityManager.h
src/wireframe/: Wireframe.h
src/world/: Map.cpp  Map.h  Tile.h
